pixel-wise-stree-segmentation.tex: added subcaption (fixes #3)

--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -23,6 +23,7 @@
 \usepackage{pgfplots}
 \usepackage{wasysym}
 \usepackage{caption}
+\usepackage{subcaption}
 % \captionsetup{belowskip=12pt,aboveskip=4pt}
 \makeatletter
 \newcommand\mynobreakpar{\par\nobreak\@afterheading}
