--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -22,6 +22,7 @@
 \usepackage{multirow}
 \usepackage{pgfplots}
 \usepackage{wasysym}
+\usepackage{float}
 \usepackage{caption}
 \usepackage{subcaption}
 % \captionsetup{belowskip=12pt,aboveskip=4pt}
@@ -29,7 +30,7 @@
 \newcommand\mynobreakpar{\par\nobreak\@afterheading}
 \makeatother
 \usepackage[noadjust]{cite}
-\usepackage[nameinlink,noabbrev]{cleveref} % has to be after hyperref, ntheorem, amsthm
+\usepackage[nameinlink,noabbrev]{cleveref} % has to be after hyperref, nthe l.137 ...eam attr{/N 4}  file{sRGBIEC1966-2.1.icmorem, amsthm
 \usepackage[binary-units,group-separator={,}]{siunitx}
 \sisetup{per-mode=fraction,binary-units=true}
 \DeclareSIUnit\pixel{px}
@@ -40,12 +41,7 @@
 \title{Pixel-wise Segmentation of Street with Neural Networks}
 \author{Martin Thoma, Marvin Teichmann, Sebastian Bittel, Vitali Kaiser}
 
-\hypersetup{
-  pdfauthor   = {Martin Thoma\sep Marvin Teichmann\sep Sebastian Bittel\sep Vitali Kaiser},
-  pdfkeywords = {recognition\sep machine learning\sep neural networks\sep classification\sep multilayer perceptron\sep deep learning},
-  pdfsubject  = {Recognition},
-  pdftitle    = {Pixel-wise Segmentation of Street with Neural Networks},
-}
+
 \crefname{table}{Table}{Tables}
 \crefname{figure}{Figure}{Figures}
 
