--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -41,6 +41,13 @@
 \title{Pixel-wise Segmentation of Street with Neural Networks}
 \author{Martin Thoma, Marvin Teichmann, Sebastian Bittel, Vitali Kaiser}
 
+\hypersetup{
+	pdfauthor   = {Martin Thoma\sep Marvin Teichmann\sep Sebastian Bittel\sep Vitali Kaiser},
+	pdfkeywords = {recognition\sep machine learning\sep neural networks\sep classification\sep multilayer perceptron\sep deep learning},
+	pdfsubject  = {Recognition},
+	pdftitle    = {Pixel-wise Segmentation of Street with Neural Networks},
+}
+
 
 \crefname{table}{Table}{Tables}
 \crefname{figure}{Figure}{Figures}
