--- a/ch7-results.tex
+++ b/ch7-results.tex
@@ -17,7 +17,27 @@ We used a computer with these specifications for the evaluation the GPU was used
 \item GeForce GTX 980 4GiB Ram
 \end{itemize}
 
-Table \ref{tab:ownapproach} shows the result of our evaluation and regression approach using the models and parameters as described in section [MODEL]. The used score is the F1-measure \ref{eq:fMeasure} which is also used for the KITTI evaluation.
+\begin{table}[]
+	\begin{center}
+		\begin{tabular}{c|cccccc}
+			\toprule
+			\textbf{Netztyp} & {\bf F1} & \textbf{TN} & \textbf{FP} & \textbf{FN} & \textbf{TP} & \textbf{ACC} \\
+			\midrule
+			\textbf{Reg. - Stride 10} & 0.880 & 0.977 & 0.022 & 0.197 & 0.802 & 0.947\\
+			\textbf{Reg. - Stride 37} & 0.890 & 0.973 & 0.026 & 0.176 & 0.823 &  \textcolor{red}{0.948}\\ 
+			\textbf{Reg. - Stride 51} & \textcolor{red}{0.895} & 0.969 & 0.030 & 0.165 & \textcolor{red}{0.834} & 0.946\\
+			\midrule
+			\textbf{Kla. - Stride 10} & 0.854 & 0.981 & 0.018 & 0.241 & 0.758 & 0.942\\
+			\textbf{Kla. - Stride 37} & 0.862 & 0.959 & 0.040 & 0.212 & 0.787 & 0.929\\
+			\textbf{Kla. - Stride 51} & 0.701 & \textcolor{red}{0.982} & 0.017 & 0.451 & 0.548 & 0.906\\
+			\bottomrule
+		\end{tabular}
+		\caption{Results on our approaches with different strides (S) on our own test set (58 images, ~ 6,7 mil. pixels)}
+		\label{tab:ownapproach}
+	\end{center}
+\end{table}
+
+\Cref{tab:ownapproach} shows the result of our evaluation and regression approach using the models and parameters as described in section [MODEL]. The used score is the F1-measure \ref{eq:fMeasure} which is also used for the KITTI evaluation.
 The table also shows the values of true positive (TP), true negative (TN), false positive (FP), false negative (FN) and accuracy (ACC) \ref{eq:accuracy} with the red coloured number being the best one in this column. This gives a better insights if pixels tend to be more wrongly correct or false classified . It shows clearly that the regressions has an overall better F1-measure and accuracy score than the classification approach. Surprisingly a smaller stride does not automatically lead to a better performance. In the classification approach a stride with the size of 37 gets the best result while in the regression based approach a stride of 51 (patch size) achieves the best performance. Unfortunately the ram of the graphic card limited our possibility to use larger patch sizes. This could have been a good way to train and evaluate on full image size and still keep our time constraint\\
 
 \begin{equation} \label{eq:fMeasure}
@@ -27,47 +47,68 @@ F1-measure = \frac{2*TP}{2TP +FP +FN}
 accuracy = \frac{TP + TN}{TP + FP + TN + FN}
 \end{equation}
 
-\begin{table}[h!]
-  \begin{center}
-    \label{tab:ownapproach}
-    \begin{tabular}{c|cccccc}
-    \toprule
-      \textbf{Netztyp} & {\bf F1} & \textbf{TN} & \textbf{FP} & \textbf{FN} & \textbf{TP} & \textbf{ACC} \\
-       \midrule
-      \textbf{Reg. - Stride 10} & 0.880 & 0.977 & 0.022 & 0.197 & 0.802 & 0.947\\
-      \textbf{Reg. - Stride 37} & 0.890 & 0.973 & 0.026 & 0.176 & 0.823 &  \textcolor{red}{0.948}\\ 
-      \textbf{Reg. - Stride 51} & \textcolor{red}{0.895} & 0.969 & 0.030 & 0.165 & \textcolor{red}{0.834} & 0.946\\
-      \midrule
-      \textbf{Kla. - Stride 10} & 0.854 & 0.981 & 0.018 & 0.241 & 0.758 & 0.942\\
-      \textbf{Kla. - Stride 37} & 0.862 & 0.959 & 0.040 & 0.212 & 0.787 & 0.929\\
-      \textbf{Kla. - Stride 51} & 0.701 & \textcolor{red}{0.982} & 0.017 & 0.451 & 0.548 & 0.906\\
-      \bottomrule
-    \end{tabular}
-    \caption{Results on our approaches with different strides (S) on our own test set (58 images, ~ 6,7 mil. pixels)}
-  \end{center}
-\end{table}
+ \begin{table}[]
+ 	\begin{center}
+ 		\begin{tabular}{c|ccc}
+ 			\toprule
+ 			\textbf{network type/stride} & \textbf{10} & \textbf{37} & \textbf{51} \\
+ 			\midrule
+ 			\textbf{regression} & 1.99 & 0.29 & 0.18 \\
+ 			\textbf{classification} & 1.83 & 0.2 & 0.11\\
+ 			\bottomrule
+ 		\end{tabular}
+ 		\caption{Runtime per image (621x188 pixel) in seconds.}
+ 		\label{tab:runtime}
+ 	\end{center}
+ \end{table}
+ 
+  \begin{figure*}[]
+  	\begin{subfigure}[t]{\columnwidth}
+  		
+  		\includegraphics[width=\columnwidth]{figures/kitty_eval/Persp_um_road_000077.png}
+  		\includegraphics[width=\columnwidth]{figures/kitty_eval/Persp_um_road_000095.png}
+  		\caption{shows KITTI test data on which our neural net performed badly.Here, red denotes false negatives, blue areas correspond to false positives and green represents true positives.}
+  		\label{fig:sfig1}
+  	\end{subfigure}
+  	\begin{subfigure}[t]{\columnwidth}  
+  		\includegraphics[width=\columnwidth]{figures/kitty_eval/Persp_uu_road_000027.png}
+  		\includegraphics[width=\columnwidth]{figures/kitty_eval/Persp_uu_road_000082.png}
+  		\caption{shows KITTI test data on which our neural net performed well.}
+  		\label{fig:sfig2}
+  	\end{subfigure}
+  \end{figure*}
+  
+ 
+ 
+ 
+ 
+ \begin{table*}[]
+ 	\begin{center}
+ 		\begin{tabular}{c|cccccc}
+ 			{\bf Benchmark} & {\bf F1} & {\bf AP} & {\bf PRE} & {\bf REC} & {\bf FPR} & {\bf FNR}\\ \hline
+ 			UM & 67.91 \% & 61.63 \% & 86.90 \% & 55.74 \% & 3.83 \% & 44.26 \%\\
+ 			UMM & 79.67 \% & 78.41 \% & 93.29 \% & 69.51 \% & 5.50 \% & 30.49 \%\\
+ 			UU  & 56.48 \% & 51.89 \% & 84.67 \% & 42.37 \% & 2.50 \% & 57.63 \%\\
+ 			URBAN & 71.10 \% & 65.14 \% & 89.83 \% & 58.84 \% & 3.67 \% & 41.16 \%\\
+ 		\end{tabular}
+ 	\end{center}
+ 	 		\caption{Write some caption!}
+ 	 		\label{tab:kitti}
+ \end{table*}
+ 
+ 
 
-To evaluate if we could meet our predefined goal (doing the classification in under 20 ms) we did a run time evaluation which is shown in table \ref{tab:runtime}. As expected the runtime increases with a smaller stride size. The classification approach shows an overall faster run time as the regression. Finally, we managed to achieve a run time under 20 ms by using a stride of 51 in both approaches.
+ 
 
 
 
- \begin{table}[h!]
-  \begin{center}
-  \label{tab:runtime}
-    \begin{tabular}{c|ccc}
-    \toprule
-      \textbf{network type/stride} & \textbf{10} & \textbf{37} & \textbf{51} \\
-     \midrule
-      \textbf{regression} & 1.99 & 0.29 & 0.18 \\
-      \textbf{classification} & 1.83 & 0.2 & 0.11\\
-      \bottomrule
-    \end{tabular}
-        \caption{Runtime per image (621x188 pixel) in seconds.}
-  \end{center}
-\end{table}
+To evaluate if we could meet our predefined goal (doing the classification in under 20 ms) we did a run time evaluation which is shown in \Cref{tab:runtime}. As expected the runtime increases with a smaller stride size. The classification approach shows an overall faster run time as the regression. Finally, we managed to achieve a run time under 20 ms by using a stride of 51 in both approaches.
 
 
-As the regression approach had the best performance and also met our time constraint, we used it to evaluate the KITTI test set and submitted the results after a transformation into birds eye view (KITTI specifications). Table \ref{tab:kitti} shows the results which are split into the different road types (UM, UMM, UU, URBAN).
+
+
+
+As the regression approach had the best performance and also met our time constraint, we used it to evaluate the KITTI test set and submitted the results after a transformation into birds eye view (KITTI specifications).\Cref{tab:kitti} shows the results which are split into the different road types (UM, UMM, UU, URBAN).
 Unfortunately our approach performs much worse on the official test set than on our own test set. Here the F1-measure score ranges between 0.564 and 0.797 while Mohan et Al achieves on all road categories a F1-measure score over 0.9. The reason for this huge difference to might be: \\
 
 \begin{enumerate}
@@ -78,39 +119,9 @@ Unfortunately our approach performs much worse on the official test set than on 
 
 Finally \ref{fig:sfig2} gives some positives example where our nerual network did well. Hardly no false positive and street around the cars is nicly segmented
 
-      \begin{table}[h!]
-  \begin{center}
-  \label{tab:kitti}
-\begin{tabular}{c|cccccc}
- {\bf Benchmark} & {\bf F1} & {\bf AP} & {\bf PRE} & {\bf REC} & {\bf FPR} & {\bf FNR}\\ \hline
-UM & 67.91 \% & 61.63 \% & 86.90 \% & 55.74 \% & 3.83 \% & 44.26 \%\\
-UMM & 79.67 \% & 78.41 \% & 93.29 \% & 69.51 \% & 5.50 \% & 30.49 \%\\
-UU  & 56.48 \% & 51.89 \% & 84.67 \% & 42.37 \% & 2.50 \% & 57.63 \%\\
-URBAN & 71.10 \% & 65.14 \% & 89.83 \% & 58.84 \% & 3.67 \% & 41.16 \%\\
-\end{tabular}
-  \end{center}
-\end{table}
 
 
 
-
-\begin{figure}[h!]
- \centering
-    \begin{subfigure}{\textwidth}
- 
-     \includegraphics[scale=0.2]{figures/kitty_eval/Persp_um_road_000077.png}
-    \includegraphics[scale=0.2]{figures/kitty_eval/Persp_um_road_000095.png}
-  \label{fig:sfig1}
-      \caption{shows KITTI test data on which our neural net performed badly.Here, red denotes false negatives, blue areas correspond to false positives and green represents true positives.}
-\end{subfigure}
-\centering
-\begin{subfigure}{\textwidth}  
-    \includegraphics[scale=0.2]{figures/kitty_eval/Persp_uu_road_000027.png}
-	\includegraphics[scale=0.2]{figures/kitty_eval/Persp_uu_road_000082.png}
-    \caption{shows KITTI test data on which our neural net performed well.}
-  \label{fig:sfig2}
-\end{subfigure}
-\end{figure}
 
 
 
