ch1 / ch7: Fixed a few spelling / typesetting mistakes

--- a/ch1-introduction.tex
+++ b/ch1-introduction.tex
@@ -6,5 +6,5 @@ autonomous driving~\cite{Tarel2009}. It can help to understand road scenes and
 reduce the space to search for lane markings. Traditionally, road segmentation
 is done with computer vision methods such as watershed
 transformation~\cite{Beucher1990}. Recent advances in deep neural networks,
-escpecially in computer vision, suggest that \glspl{CNN} might perform better
+especially in computer vision, suggest that \glspl{CNN} might perform better
 on road segmentation tasks then those traditional approaches.
